🩹quick fixed overflow

--- a/web/src/assets/styles/index.scss
+++ b/web/src/assets/styles/index.scss
@@ -3,7 +3,8 @@
 
 .main {
     position: relative;
-    margin: 90px;
+    margin-top: 90px;
+    margin-bottom: 90px;
     min-height: calc(100vh - 180px);
 }
 
